# Openapi2HTML

./: .drone.yml  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
example/: openapi.json
src/: __init__.py  main.py  main.test.py
