[tool.poetry]
name = "openapi-to-html"
version = "0.1.0"
description = ""
authors = ["GGGoingdown <eddiepai0401@gmail.com>"]
readme = "README.md"
packages = [{include = "openapi_to_html"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
